<resources>
    <string name="app_name">Feedlot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_ith">ITH</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_categories">Categorías</string>
    <string name="menu_observations">Observaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="auto_fill"></string>
    <string name="menu_test">Test</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="discoverable">Discoverable</string>
    <string name="get_paired_devices">Get Paired Devices</string>
    <string name="image">image</string>
    <string name="bluetooth">bluetooth</string>

</resources>
