<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ith"
            android:icon="@drawable/ic_menu_ith"
            android:title="@string/menu_ith" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_menu_tag"
            android:title="@string/menu_tags" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_observations"
            android:icon="@drawable/ic_menu_observation"
            android:title="@string/menu_observations" />
    </group>


</menu>
